--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-redux": "^5.0.3",
     "react-test-renderer": "^15.5.4",
     "redux": "^3.5.2",
-    "todomvc-app-css": "^2.1.0"
+    "sass": "^0.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
