--- a/package.json
+++ b/package.json
@@ -1,26 +1,61 @@
 {
-  "name": "todomvc",
-  "version": "0.0.1",
+  "name": "typescript-react-redux-boilerplate",
+  "version": "1.0.0",
   "private": true,
+  "description": "A frontend boilerplate with React, Redux and Typescript",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --debug --devtool cheap-module-source-map --output-pathinfo --history-api-fallback --hot --inline --progress --colors --port 3001 --open",
+    "build": "webpack -p --progress --colors"
+  },
+  "license": "MIT",
   "devDependencies": {
-    "enzyme": "^2.8.0",
-    "react-addons-test-utils": "^15.3.0",
-    "react-scripts": "^0.9.5"
+    "@types/classnames": "^0.0.32",
+    "@types/history": "^4.5.0",
+    "@types/node": "^7.0.14",
+    "@types/react": "^15.0.23",
+    "@types/react-dom": "^0.14.23",
+    "@types/react-redux": "^4.4.40",
+    "@types/react-router": "^4.0.4",
+    "@types/redux-actions": "^1.2.4",
+    "@types/webpack": "^2.2.15",
+    "@types/webpack-env": "^1.13.0",
+    "awesome-typescript-loader": "^3.1.2",
+    "css-loader": "^0.27.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "postcss": "^5.2.17",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-cssnext": "^2.10.0",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.3.3",
+    "postcss-reporter": "^3.0.0",
+    "postcss-url": "^5.1.2",
+    "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.16.1",
+    "typescript": "^2.3.1",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "babel-eslint": "^7.2.3",
     "classnames": "^2.2.5",
-    "prop-types": "^15.5.8",
-    "react": "^15.5.0",
-    "react-dom": "^15.5.0",
-    "react-redux": "^5.0.3",
-    "react-test-renderer": "^15.5.4",
-    "redux": "^3.5.2",
-    "sass": "^0.5.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "test": "react-scripts test"
+    "eslint": "^3.19.0",
+    "eslint-config-react-app": "^0.6.2",
+    "eslint-plugin-flowtype": "^2.32.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-actions": "^2.0.3"
   }
 }
