--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "redux": "^3.6.0",
-    "redux-actions": "^2.0.3"
+    "redux-actions": "^2.0.3",
+    "sass-loader": "^6.0.5"
   }
 }
