--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "^0.10.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
     "postcss": "^5.2.17",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.10.0",
@@ -35,10 +36,11 @@
     "postcss-reporter": "^3.0.0",
     "postcss-url": "^5.1.2",
     "react-hot-loader": "^1.3.1",
+    "sass-loader": "^6.0.5",
     "style-loader": "^0.16.1",
     "typescript": "^2.3.1",
     "url-loader": "^0.5.8",
-    "webpack": "^2.4.1",
+    "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0"
   },
